--- a/static/.htaccess
+++ b/static/.htaccess
@@ -81,3 +81,10 @@ RewriteRule ^ https://cabear.com%{REQUEST_URI} [L,R=301]
     Header set Cache-Control "public, max-age=31536000, immutable"
   </FilesMatch>
 </IfModule>
+
+
+<IfModule mod_headers.c>
+  <Files "robots.txt">
+    Header set Cache-Control "public, max-age=600, must-revalidate"
+  </Files>
+</IfModule>
